# ECOM-DATA-PRODUCT

dev/: .gitignore  pyproject.toml
dev/notebooks/: analysis.py
dev/src/accelerator/: init_accelerator.sh
dev/src/accelerator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dev/src/accelerator/jobs/: landing_to_bronze.py
dev/src/accelerator/utils/: config_utility.yaml  csv_reader_utility.py  logging_utility.py
