[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "accelerator"
version = "0.1.0"
description = "Local data accelerator framework for medallion-style analytics"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pyspark",
    "delta-spark",
    "duckdb",
    "pyyaml",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
